Add git integration cells

--- a/FungiWork.ipynb
+++ b/FungiWork.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0DNkPy4ResTm8aEyTnfdD"
+      "authorship_tag": "ABX9TyMhotYLQ5c5wudsyklmlmsa"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +15,133 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "code",
+      "source": [
+        "# ----- SETUP (RUN ONCE) ------\n",
+        "# Before running make sure you set your fork\n",
+        "# NOTE!!! CHANGE nkmwicz to your username e.g., ...com:nkmwicz/fungal...\n",
+        "# You can find this from your forked repo under the code button\n",
+        "# Only run once, or if you CANNOT cd (change directory)\n",
+        "# into the repository\n",
+        "# For this to work (in colab)\n",
+        "# you must have created a GITHUB token\n",
+        "# and added it to colab.\n",
+        "\n",
+        "from google.colab import userdata\n",
+        "email = userdata.get('email')\n",
+        "\n",
+        "# NOTE: set your email as your email\n",
+        "!git config --global user.email {email}\n",
+        "\n",
+        "# NOTE: Change your username\n",
+        "!git config --global user.name nkmwicz\n",
+        "\n",
+        "# NOTE: change the address to the address of your fork!\n",
+        "!git clone https://github.com/nkmwicz/fungal-temp-analysis.git"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KNpvI1NZcH2W",
+        "outputId": "b326a73e-f713-4cb5-a227-91c089b9dbd9"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'fungal-temp-analysis'...\n",
+            "remote: Enumerating objects: 11, done.\u001b[K\n",
+            "remote: Counting objects: 100% (11/11), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (10/10), done.\u001b[K\n",
+            "remote: Total 11 (delta 1), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (11/11), 1.15 MiB | 8.26 MiB/s, done.\n",
+            "Resolving deltas: 100% (1/1), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ---- Change Directory to repository -----\n",
+        "# Run when first open jupyter notebook.\n",
+        "# If this fails, us above cell.\n",
+        "%cd fungal-temp-analysis"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SZAQrID_eMfk",
+        "outputId": "3db584fd-3cf7-4f79-c80e-65f9d0c1045d"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/fungal-temp-analysis/fungal-temp-analysis\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# make sure to run this cell to have access to this function below\n",
+        "def commit_and_push(message):\n",
+        "    import os\n",
+        "    from google.colab import userdata\n",
+        "    try:\n",
+        "        # change your username from mine to yours.\n",
+        "        username = \"nkmwicz\"\n",
+        "        !git add .\n",
+        "        !git commit -m \"{message}\"\n",
+        "        token = userdata.get(\"GITHUB_TOKEN\")\n",
+        "        !git push https://{username}:{token}@github.com/{username}/fungal-temp-analysis.git\n",
+        "        print(\"Changes Saved to GitHub!\")\n",
+        "    except Exception as e:\n",
+        "        print(e)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "fHela8UFkg5P"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# SOME NOTES\n",
+        "# %ls shows the available files in the repo to get names of files\n",
+        "# to read a tsv, use pd.read_csv but pass in sep=\"\\t\"\n",
+        "# to reperesent tabs as separators\n",
+        "%ls"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YDJcIbNnxhOy",
+        "outputId": "90a7464c-c001-4901-b5cf-7f3cc9fa8511"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "eukaryotes_ncbi_temperatures.csv  FungiWork.ipynb  LICENSE  README.md  temperature_data.tsv\n"
+          ]
+        }
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -28,6 +155,56 @@
         "# remove those without temp.\n",
         "# name, assembly, temp"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ----Keep as last----\n",
+        "# Use to save changes in repo that are not in this file.\n",
+        "# To save this file, use ctrl + s\n",
+        "# Then set commit message location, branch, etc.\n",
+        "\n",
+        "# Change commit message\n",
+        "commit_and_push(\"Added deleteme file for test\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iiTaCO3xw_Jc",
+        "outputId": "e65c3ce5-163a-43f8-841a-b3bb56b8d05c"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[main 915de9b] Added deleteme file for test\n",
+            " 1 file changed, 4 insertions(+)\n",
+            " create mode 100644 delete_me.csv\n",
+            "Enumerating objects: 4, done.\n",
+            "Counting objects: 100% (4/4), done.\n",
+            "Delta compression using up to 2 threads\n",
+            "Compressing objects: 100% (2/2), done.\n",
+            "Writing objects: 100% (3/3), 307 bytes | 307.00 KiB/s, done.\n",
+            "Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\n",
+            "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
+            "To https://github.com/nkmwicz/fungal-temp-analysis.git\n",
+            "   5f3e9bd..915de9b  main -> main\n",
+            "Changes Saved to GitHub!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "5yJonF-I7gHK"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
