Updated functions for pushing and fetching from github

--- a/FungiWork.ipynb
+++ b/FungiWork.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhotYLQ5c5wudsyklmlmsa"
+      "authorship_tag": "ABX9TyNmBaYqwBgmDqyV6T/T2bV+"
     },
     "kernelspec": {
       "name": "python3",
@@ -20,7 +20,6 @@
       "source": [
         "# ----- SETUP (RUN ONCE) ------\n",
         "# Before running make sure you set your fork\n",
-        "# NOTE!!! CHANGE nkmwicz to your username e.g., ...com:nkmwicz/fungal...\n",
         "# You can find this from your forked repo under the code button\n",
         "# Only run once, or if you CANNOT cd (change directory)\n",
         "# into the repository\n",
@@ -30,36 +29,40 @@
         "\n",
         "from google.colab import userdata\n",
         "email = userdata.get('email')\n",
+        "username = userdata.get('username')\n",
+        "\n",
+        "# Change this to your forked url!!\n",
+        "gh_repo_url = \"https://github.com/nkmwicz/fungal-temp-analysis.git\"\n",
         "\n",
         "# NOTE: set your email as your email\n",
         "!git config --global user.email {email}\n",
         "\n",
         "# NOTE: Change your username\n",
-        "!git config --global user.name nkmwicz\n",
+        "!git config --global user.name {username}\n",
         "\n",
         "# NOTE: change the address to the address of your fork!\n",
-        "!git clone https://github.com/nkmwicz/fungal-temp-analysis.git"
+        "!git clone {gh_repo_url}"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KNpvI1NZcH2W",
-        "outputId": "b326a73e-f713-4cb5-a227-91c089b9dbd9"
+        "outputId": "1660bfa4-b91c-4b14-a215-bd81394582c7"
       },
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'fungal-temp-analysis'...\n",
-            "remote: Enumerating objects: 11, done.\u001b[K\n",
-            "remote: Counting objects: 100% (11/11), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (10/10), done.\u001b[K\n",
-            "remote: Total 11 (delta 1), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (11/11), 1.15 MiB | 8.26 MiB/s, done.\n",
-            "Resolving deltas: 100% (1/1), done.\n"
+            "remote: Enumerating objects: 17, done.\u001b[K\n",
+            "remote: Counting objects: 100% (17/17), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (14/14), done.\u001b[K\n",
+            "remote: Total 17 (delta 4), reused 3 (delta 1), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (17/17), 1.16 MiB | 3.58 MiB/s, done.\n",
+            "Resolving deltas: 100% (4/4), done.\n"
           ]
         }
       ]
@@ -77,15 +80,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SZAQrID_eMfk",
-        "outputId": "3db584fd-3cf7-4f79-c80e-65f9d0c1045d"
+        "outputId": "5faf00a9-30b6-4ae2-9a6a-425442514858"
       },
-      "execution_count": 11,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/fungal-temp-analysis/fungal-temp-analysis\n"
+            "/content/fungal-temp-analysis\n"
           ]
         }
       ]
@@ -94,25 +97,41 @@
       "cell_type": "code",
       "source": [
         "# make sure to run this cell to have access to this function below\n",
-        "def commit_and_push(message):\n",
+        "def commit_and_push(repo_url, message):\n",
         "    import os\n",
+        "    import subprocess\n",
         "    from google.colab import userdata\n",
+        "\n",
         "    try:\n",
         "        # change your username from mine to yours.\n",
-        "        username = \"nkmwicz\"\n",
+        "        username = userdata.get(\"username\")\n",
+        "        token = userdata.get(\"GITHUB_TOKEN\")\n",
         "        !git add .\n",
         "        !git commit -m \"{message}\"\n",
-        "        token = userdata.get(\"GITHUB_TOKEN\")\n",
-        "        !git push https://{username}:{token}@github.com/{username}/fungal-temp-analysis.git\n",
+        "        !git push \"https://{username}:{token}@github.com/{username}/fungal-temp-analysis.git\"\n",
         "        print(\"Changes Saved to GitHub!\")\n",
         "    except Exception as e:\n",
         "        print(e)\n",
-        ""
+        "\n",
+        "# Only call this function if you want to\n",
+        "def catch_up_to_main_repo():\n",
+        "    import os\n",
+        "    from google.colab import userdata\n",
+        "    try:\n",
+        "        username = \"nkmwicz\"\n",
+        "        token = userdata.get(\"GITHUB_TOKEN\")\n",
+        "        main_repo = \"https://github.com/nkmwicz/fungal-temp-analysis.git\"\n",
+        "        !git remote add upstream {main_repo}\n",
+        "        !git fetch upstream\n",
+        "        !git merge upstream/main\n",
+        "        !git push https://{username}:{token}@github.com/{username}/fungal-temp-analysis.git\n",
+        "    except Exception as e:\n",
+        "        print(e)"
       ],
       "metadata": {
         "id": "fHela8UFkg5P"
       },
-      "execution_count": 22,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -129,15 +148,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YDJcIbNnxhOy",
-        "outputId": "90a7464c-c001-4901-b5cf-7f3cc9fa8511"
+        "outputId": "1f8e53d0-6294-4df3-a15e-33f5f0aa1b48"
       },
-      "execution_count": 15,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "eukaryotes_ncbi_temperatures.csv  FungiWork.ipynb  LICENSE  README.md  temperature_data.tsv\n"
+            "delete_me.csv                     FungiWork.ipynb  README.md\n",
+            "eukaryotes_ncbi_temperatures.csv  LICENSE          temperature_data.tsv\n"
           ]
         }
       ]
@@ -159,39 +179,57 @@
     {
       "cell_type": "code",
       "source": [
-        "# ----Keep as last----\n",
+        "import pandas as pd\n",
+        "df = pd.read_csv(\"./delete_me.csv\")\n",
+        "df.loc[len(df)] = [11,12,13,14]\n",
+        "df.to_csv(\"./delete_me.csv\", index=False)"
+      ],
+      "metadata": {
+        "id": "2kwLNTMVxsbU"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ----Keep as last cell----\n",
         "# Use to save changes in repo that are not in this file.\n",
         "# To save this file, use ctrl + s\n",
         "# Then set commit message location, branch, etc.\n",
         "\n",
+        "# Change repo url to your forked url\n",
+        "url = \"https://github.com/nkmwicz/fungal-temp-analysis.git\"\n",
         "# Change commit message\n",
-        "commit_and_push(\"Added deleteme file for test\")"
+        "commit_and_push(url, \"Added deleteme file for test\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "iiTaCO3xw_Jc",
-        "outputId": "e65c3ce5-163a-43f8-841a-b3bb56b8d05c"
+        "outputId": "b9181aad-554b-4c9a-d159-bfe1b9618462"
       },
-      "execution_count": 23,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[main 915de9b] Added deleteme file for test\n",
-            " 1 file changed, 4 insertions(+)\n",
-            " create mode 100644 delete_me.csv\n",
-            "Enumerating objects: 4, done.\n",
-            "Counting objects: 100% (4/4), done.\n",
+            "On branch main\n",
+            "Your branch is ahead of 'origin/main' by 1 commit.\n",
+            "  (use \"git push\" to publish your local commits)\n",
+            "\n",
+            "nothing to commit, working tree clean\n",
+            "Enumerating objects: 5, done.\n",
+            "Counting objects: 100% (5/5), done.\n",
             "Delta compression using up to 2 threads\n",
-            "Compressing objects: 100% (2/2), done.\n",
-            "Writing objects: 100% (3/3), 307 bytes | 307.00 KiB/s, done.\n",
+            "Compressing objects: 100% (3/3), done.\n",
+            "Writing objects: 100% (3/3), 313 bytes | 313.00 KiB/s, done.\n",
             "Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\n",
             "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
             "To https://github.com/nkmwicz/fungal-temp-analysis.git\n",
-            "   5f3e9bd..915de9b  main -> main\n",
+            "   c74cf0e..cf49267  main -> main\n",
             "Changes Saved to GitHub!\n"
           ]
         }
