--- a/FungiWork.ipynb
+++ b/FungiWork.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNmBaYqwBgmDqyV6T/T2bV+"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -28,7 +27,7 @@
         "# and added it to colab.\n",
         "\n",
         "from google.colab import userdata\n",
-        "email = userdata.get('email')\n",
+        "email = userdata.get('')\n",
         "username = userdata.get('username')\n",
         "\n",
         "# Change this to your forked url!!\n",
@@ -50,7 +49,7 @@
         "id": "KNpvI1NZcH2W",
         "outputId": "1660bfa4-b91c-4b14-a215-bd81394582c7"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +81,7 @@
         "id": "SZAQrID_eMfk",
         "outputId": "5faf00a9-30b6-4ae2-9a6a-425442514858"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +130,7 @@
       "metadata": {
         "id": "fHela8UFkg5P"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +149,7 @@
         "id": "YDJcIbNnxhOy",
         "outputId": "1f8e53d0-6294-4df3-a15e-33f5f0aa1b48"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,7 +186,7 @@
       "metadata": {
         "id": "2kwLNTMVxsbU"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -210,7 +209,7 @@
         "id": "iiTaCO3xw_Jc",
         "outputId": "b9181aad-554b-4c9a-d159-bfe1b9618462"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
